<!--
 Copyright 2020 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name" translatable="false">FHIR Engine Example</string>
    <string name="title_patient_list">Registered Patients</string>
    <string name="title_patient_detail">SamplePatient Detail</string>
    <string name="menu_about">About Fhir Engine</string>
    <string name="menu_load_resource">Load CQL Resources &amp; Patients</string>
    <string name="add_client">Add Client</string>
    <string name="menu_sync_resources">Sync Resources</string>

    <string name="version">Version %s</string>
    <string name="authenticator_label" translatable="false">Authenticate FHIR Core</string>
    <string name="authenticator_account_type" translatable="false">org.smartregister.fhircore.app</string>

    <string name="menu_covax_clients_list_title">COVAX Clients</string>
    <string name="menu_anc_clients_list_title">ANC Clients</string>

    <string name="language">Language</string>
    <string name="empty_client_list_message_title">No Results</string>
    <string name="empty_client_list_message_details">Sorry, we could not find client with given name or ID</string>

    <!-- For display observations in brief, for a patient -->
    <string name="observation_brief_text" translatable="false">%1$s: %2$s\nEffective: %3$s</string>

    <string name="submit_button_text">Submit</string>
    <string name="search_hint">Search name or ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_next">Next &gt;&gt;</string>
    <string name="str_previous">&lt;&lt; Previous</string>
    <string name="str_page_info">Page %1$d of %2$d</string>

    <string name="immunization_brief_text">"Received %1$s dose %2$d"</string>
    <string name="immunization_next_dose_text">"Dose %1$d due %2$s"</string>
    <string name="immunization_next_overdue_dose_text">"Dose %1$d overdue %2$s"</string>

    <string name="status_vaccinated">Vaccinated</string>
    <string name="status_overdue">Overdue</string>
    <string name="status_received_vaccine">Vaccine %1$d \n%2$s</string>
    <string name="view_vaccine_certificate">"View vaccine certificate"</string>
    <string name="fully_vaccinated">"Fully vaccinated"</string>

    <string name="edit">Edit</string>
    <string name="str_save">Save</string>
    <string name="select_language">Select Language</string>
    <string name="register_new_client">Register new client</string>
    <string name="sync">Sync</string>
    <string name="record_vaccine">Record Vaccine</string>
    <string name="no_vaccine_received">No vaccine received</string>
    <string name="view_registration_details">View Registration Details</string>
    <string name="client_list_title_covax">COVAX clients</string>
    <string name="client_list_title_anc">ANC clients</string>

    <string name="show_overdue">Show overdue</string>
    <string name="record_vaccine_nl">Record\nVaccine</string>
    <string name="client_info">Client info</string>
    <string name="last_seen_date">Last seen 29-3-2021</string>
    <string name="last_sync_timestamp">Last 05:30 PM, Mar 3</string>
    <string name="logout_as_user">Log out as </string>
    <string name="registered_date">Registered </string>

    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="username_input_hint">Enter username</string>
    <string name="password_input_hint">Enter password</string>
    <string name="show_password_button_hint">Show password</string>
    <string name="login_error_message">Invalid username or password</string>
    <string name="login_call_fail_error_message">Failed to verify credentials from server. Check your internet connection</string>
    <string name="userinfo_call_fail_error_message">Failed to get user info from server. Check your internet connection</string>
    <string name="done">Done</string>
    <string name="second_dose_due_at"> Second dose due on %1$s</string>
    <string name="ordinal_vaccine_dose_recorded">%1$s 1st dose recorded</string>
    <string name="please_select_vaccine">Please Select Vaccine</string>
    <string name="scan_bar_code">SCAN BARCODE</string>
    <string name="at_risk">At Risk</string>
    <string name="syncing">Syncing&#8230;</string>
    <string name="vaccine">Vaccine</string>
    <string name="provider">Provider</string>
    <string name="vaccine_certificate">Vaccine Certificate</string>
    <string name="immune">Immune</string>
    <string name="not_immune">Not immune</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="unknown">Unknown</string>
    <string name="age">Age %1$s</string>
    <string name="immunization_given">"%1$s dose: %2$s"</string>
    <string name="immunization_due">"%1$s dose due %2$s"</string>
    <string name="immunization_overdue">"%1$s dose overdue %2$s"</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="report_adverse_event">Report Adverse Event</string>
</resources>
