<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.InputType" />

        <variable
            name="loginViewModel"
            type="org.smartregister.fhircore.eir.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ProgressBar
            android:id="@+id/progressIcon"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16pt" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login_error_message"
            android:textColor="@color/colorError"
            android:visibility="@{loginViewModel.loginFailed ? View.VISIBLE : View.GONE}" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp" />

        <EditText
            android:id="@+id/login_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_input_hint"
            android:text="@={loginViewModel.loginUser.username}"
            app:addTextChangedListener="@{loginViewModel.credentialsWatcher}" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:importantForAutofill="no"
            android:inputType="@{loginViewModel.showPassword ? InputType.TYPE_CLASS_TEXT : (InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD)  }"
            android:text="@={loginViewModel.loginUser.password}"
            app:addTextChangedListener="@{loginViewModel.credentialsWatcher}" />

        <CheckBox
            android:id="@+id/login_show_password_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={loginViewModel.showPassword}"
            android:text="@string/show_password_button_hint"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@{loginViewModel.allowLogin ? @color/colorAccent : @color/light_gray}"
            android:enabled="@{loginViewModel.allowLogin}"
            android:onClick="@{loginViewModel.remoteLogin}"
            android:text="@string/login_text"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:text="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="193dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_opensrp_logo" />

    </LinearLayout>
</layout>
