<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/patient_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.patient.details.PatientDetailsFragment">

        <TextView
            android:id="@+id/patientNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_four_dp_margin"
            android:layout_marginTop="@dimen/twenty_four_dp_margin"
            android:text="Patient Name"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/patientGenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_four_dp_margin"
            android:layout_marginTop="@dimen/eight_dp_margin"
            android:text="Gender"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patientNameTextView" />

        <TextView
            android:id="@+id/patientAgeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_four_dp_margin"
            android:layout_marginTop="@dimen/eight_dp_margin"
            android:text="Age"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patientGenderTextView" />

        <LinearLayout
            android:id="@+id/immuneLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four_dp_margin"
            android:layout_marginEnd="@dimen/twenty_four_dp_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/immuneStatusImageView"
                android:layout_width="@dimen/ninety_two_dp_size"
                android:layout_height="@dimen/ninety_two_dp_size"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/immuneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/immune"
                android:textSize="@dimen/eighteen_sp_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/demographicSeparator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/sixteen_dp_margin"
            android:background="@color/separator_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/immuneLayout" />

        <TextView
            android:id="@+id/vaccineLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_four_dp_margin"
            android:layout_marginTop="@dimen/sixteen_dp_margin"
            android:text="@string/vaccine"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp_text_size"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/demographicSeparator" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/horizontalBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="vaccineLabel,providerLabel" />

        <TextView
            android:id="@+id/noVaccinesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/forty_dp_margin"
            android:layout_marginTop="@dimen/sixteen_dp_margin"
            android:layout_marginEnd="@dimen/twenty_four_dp_margin"
            android:text="@string/no_vaccine_received"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp_text_size"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/horizontalBarrier"
            app:layout_constraintTop_toBottomOf="@+id/demographicSeparator" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/immunizationsListView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/forty_dp_margin"
            android:layout_marginTop="@dimen/sixteen_dp_margin"
            android:layout_marginEnd="@dimen/twenty_four_dp_margin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/horizontalBarrier"
            app:layout_constraintTop_toBottomOf="@+id/noVaccinesTextView" />

        <View
            android:id="@+id/vaccinationSeparator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/sixteen_dp_margin"
            android:background="@color/separator_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/immunizationsListView" />

        <TextView
            android:id="@+id/providerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty_four_dp_margin"
            android:layout_marginTop="@dimen/sixteen_dp_margin"
            android:text="@string/provider"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp_text_size"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaccinationSeparator" />

        <TextView
            android:id="@+id/providerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/forty_dp_margin"
            android:layout_marginTop="@dimen/sixteen_dp_margin"
            android:layout_marginEnd="@dimen/twenty_four_dp_margin"
            android:text="Arundel mobile clinic Cumberland, MD"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/horizontalBarrier"
            app:layout_constraintTop_toBottomOf="@+id/vaccinationSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sixteen_dp_margin"
            android:layout_marginEnd="@dimen/sixteen_dp_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/recordVaccineButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen_dp_margin"
                android:background="@drawable/rounded_white_thicker_stroked_bg"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/record_vaccine"
                android:visibility="gone" />

            <Button
                android:id="@+id/reportAdverseEventButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen_dp_margin"
                android:background="@drawable/rounded_red_stroked_white_bg"
                android:text="@string/report_adverse_event"
                android:textColor="@color/status_red"
                android:visibility="gone"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/showQRCodeButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen_dp_margin"
                android:background="@drawable/rounded_blue_stroked_white_bg"
                android:text="@string/show_qr_code"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                app:backgroundTint="@null" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
