<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2020 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.patient.register.CovaxListActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/base_register_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp">

                <include layout="@layout/toolbar_base_register" />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/empty_list_message_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_register_new_client"
                android:layout_below="@id/base_register_toolbar"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/list_empty_message_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/empty_client_list_message_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/list_empty_message_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/list_empty_message_title"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:text="@string/empty_client_list_message_details" />
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/list_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_register_new_client"
                android:layout_below="@id/base_register_toolbar"
                android:layout_marginBottom="15dp">

            </androidx.viewpager2.widget.ViewPager2>

            <Button
                android:id="@+id/btn_register_new_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_white_bg"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="5dp"
                android:fontFamily="sans-serif-medium"
                android:padding="10dp"
                android:paddingHorizontal="10dp"
                android:paddingEnd="15dp"
                android:text="@string/register_new_client"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/drawer_menu_bg_color"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_menu_header"
            app:itemBackground="@drawable/drawer_menu_item_selector"
            app:itemIconPadding="10dp"
            app:itemIconSize="32dp"
            app:itemIconTint="#AEAEAE"
            app:itemTextAppearance="@style/menu_text_style"
            app:itemTextColor="@color/white"
            app:menu="@menu/drawer_menu">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#404040"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/tv_sync"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_sync"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:text="@string/sync"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tv_last_sync_timestamp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:paddingEnd="15dp"
                    android:text="@string/last_sync_timestamp"
                    android:textColor="#E0E0E0" />

            </LinearLayout>

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loader_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#55000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/loader"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:indeterminate="true"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>